:hammer: Fixed an issue where the slant caused background to show behind the slant but under the image. Basically I removed a colored strip of background that wasn't suppposed to be seen.

--- a/devwp/sass/components/_backgrounds.scss
+++ b/devwp/sass/components/_backgrounds.scss
@@ -1,6 +1,7 @@
 /**
  * Backgrounds
  * =================================
+ * - Body Background
  * - Photo Header
  * - Video Header
  * - Color Backgrounds
@@ -10,7 +11,9 @@
  *
  */
 
-
+body {
+  background-color: $background;
+}
 
 //*********************************************
 //************** PHOTO HEADER *****************
