--- a/devwp/sass/utilities/_spacing.scss
+++ b/devwp/sass/utilities/_spacing.scss
@@ -74,6 +74,10 @@
   margin-right: 30px;
 }
 
+.margin-pull-large {
+  margin-top: -50px;
+}
+
 
 // Content Adjustment on whole page - Desktop only
 @media screen and (min-width: 40em) {
