--- a/devwp/sass/utilities/_typography.scss
+++ b/devwp/sass/utilities/_typography.scss
@@ -44,7 +44,6 @@ h2 {
   font-family: $head-font;
   font-size: 2.5em;
   font-weight: 800;
-  text-transform: uppercase;
 }
 
 h3 {
